--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+calamine = { version = "0.31.0", features = ["chrono"] }
+chrono = "0.4.42"
+serde = { version = "1.0.228", features = ["derive"] }
+toml = "0.9.7"
