--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
 calamine = { version = "0.31.0", features = ["chrono"] }
 chrono = "0.4.42"
 serde = { version = "1.0.228", features = ["derive"] }
+thiserror = "2.0.17"
 toml = "0.9.7"
