--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 anyhow = "1.0.100"
 calamine = { version = "0.31.0", features = ["chrono"] }
 chrono = "0.4.42"
+crossterm = "0.29.0"
+ratatui = "0.29.0"
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
 toml = "0.9.7"
