--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ ratatui = "0.29.0"
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
 toml = "0.9.7"
+tui-input = "0.14.0"
 webbrowser = "1.0.5"
